<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IndeedCharts</string>
    <string name="desc">Description</string>
    <string name="action_settings">Settings</string>
    <string name="mycharts">My Charts</string>
    
    <!--Sharable  -->
    <string name="chart_title">Title</string>
    <string name="chart_styles">Styles</string>
    <string name="chart_add_series">Add Series</string>
    <string name="chart_add_category">Add Category</string>
    <string name="chart_change_series_name">Change Series name</string>
    <string name="chart_change_category_name">Change Category name</string>
    <string name="chart_change_xy_axis">X and Y axis</string>
    <string name="chart_change_xy_values">X and Y Values</string>
   <string name="chart_change_x_values">X Values</string>
    <string name="chart_change_y_values">Y Values</string>
    <string name="chart_change_values">Series Values</string>
    <string name="chart_change_min_max_values">Minimum and Maximum values</string>
    <string name="chart_change_color_chart">Color of chart</string>
    <string name="chart_visibility_chart_value">Visibility of chart values</string>
    <string name="chart_exit">Exit</string>
   
    <string name="chart_change_marker_style">Marker of Style</string>
    <string name="chart_change_pointer_style">Pointer of Style</string>
    <string name="chart_clear">Clear</string>
    <string name="chart_save">Save</string>
    
	<!--Menu for PieChartSettingActivty  -->
    <string name="pie_chart_set_title">Enter section name and value</string>
    <string name="pie_chart_section_name">Section Name:</string>
    <string name="pie_chart_section_value">Value:</string>
    <string name="pie_chart_color_pick">Color Pick</string>
    <string name="pie_chart_apply">Apply</string>
  
    
   <!--Constants  -->
   <string name = "chart_id">Chart_Id</string>
   <string name = "chart_image">Chart_Image</string>
   <string name = "chart_default_title">Title</string>
   <string name = "chart_default_xaxis">X axis</string>
   <string name = "chart_default_yaxis">Y axis</string>
   
   
   <string name = "action_add_series">Action_Add_Series</string>
   <string name = "action_redraw">Action_Redraw</string>
   <string name = "action_create_new_chart">Action_Create_new_Chart</string>
   <string name = "action_open_existing_chart">Action_Open_Existing_Chart</string>
   
   <string name = "action_Type">Action_Type</string>
   
   <!-- For menus in MyChartListActivity -->
   <string name = "mychart_list_menu_sortby">Sort By</string>
   <string name = "mychart_list_menu_name">Names</string>
   <string name = "mychart_list_menu_ascending">Ascending</string>
   <string name = "mychart_list_menu_descending">Descending</string>
   <string name = "mychart_list_menu_charts">Charts</string>
   <string name = "mychart_list_menu_piechart">Pie Chart</string>
   <string name = "mychart_list_menu_linechart">Line Chart</string>
   <string name = "mychart_list_menu_barchart">Bar Chart</string>
   <string name = "mychart_list_menu_stackbarchart">Stack Bar Chart</string>
   <string name = "mychart_list_menu_dialchart">Dial Chart</string>
   <string name = "mychart_list_menu_scatterchart">Scatter Chart</string>
   
   
   
    
    

</resources>