<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/dial_chart_add"
        android:orderInCategory="99"
        android:showAsAction="ifRoom"
        android:title="@string/chart_add_series">
    </item>
    <item
        android:id="@+id/dial_chart_title"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/chart_title">
    </item>
    <item
        android:id="@+id/dial_chart_series_name_change"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/chart_change_series_name">
    </item>
    <item
        android:id="@+id/dial_chart_category_values"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/chart_change_values">
    </item>
    <item
        android:id="@+id/dial_chart_min_max_values"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/chart_change_min_max_values">
    </item>
    
     
    <item
        android:id="@+id/dial_chart_color_line"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/chart_change_color_chart">
    </item>
    <item
        android:id="@+id/dial_chart_pointer_type"
        android:orderInCategory="105"
        android:showAsAction="never"
        android:title="@string/chart_change_pointer_style">
    </item>
     
    <item
        android:id="@+id/dial_chart_save"
        android:orderInCategory="106"
        android:showAsAction="never"
        android:title="@string/chart_save">
    </item>

</menu>